// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connections.vue Connection type "BQ" should render create version properly 1`] = `
<div class="Dialog is-white"><button class="CDB-Shape Dialog-closeBtn"><img src="../../assets/icons/common/close.svg"></button>
  <div class="Dialog-contentWrapper Dialog-contentWrapper--withHeaderWrapper">
    <div class="Dialog-header CreateDialog-header with-separator"><img height="36" src="[object Object]" class="u-mb--12">
      <h2 class="CDB-Text CDB-Size-large u-mainTextColor">ConnectorsPage.addConnection</h2>
    </div>
    <div class="Dialog-body Dialog-body--expanded Dialog-body--create Dialog-body--noPaddingTop Dialog-body--withoutBorder Dialog-body--no-spacing">
      <div class="container grid">
        <div class="grid-cell grid-cell--col12 u-flex u-flex__direction--column">
          <div class="u-flex u-flex__justify--center u-flex__align--center u-pt--10 sub-header"><button class="back is-small is-semibold is-txtPrimary u-flex u-flex__align--center"><img src="../../assets/icons/common/icon-prev-blue.svg" class="u-mr--8">
              Connect
            </button>
            <h3 class="title is-caption is-regular is-txtMidGrey u-flex u-flex__align--center"><img height="21" src="undefined/images/layout/connectors/bigquery.svg" class="u-mr--8">
              DataPage.connectWith BigQuery
            </h3>
          </div>
          <div class="u-mt--32">
            <div class="u-flex u-flex__justify--center">
              <div class="u-flex u-flex__justify--center">
                <div class="main u-flex u-flex__align--center u-flex__direction--column">
                  <div class="disclaimer">
                    <h4 class="is-small is-semibold u-mt--16">ConnectorsPage.BigQuery.title</h4>
                    <ul class="u-mt--8">
                      <li class="u-mb--16"><span class="text is-small">ConnectorsPage.BigQuery.disclaimer1</span></li>
                      <li class="u-mb--16"><span class="text is-small">ConnectorsPage.BigQuery.disclaimer2</span></li>
                      <li class="u-mb--16"><span class="text is-small">ConnectorsPage.BigQuery.disclaimer3</span></li>
                      <li class="u-mb--16"><span class="text is-small">ConnectorsPage.BigQuery.disclaimer4</span></li>
                    </ul>
                    <div class="u-mt--48 u-flex u-flex__justify--center u-flex__align--center"><button class="is-small is-semibold is-txtPrimary">ConnectorsPage.BigQuery.conditions.cancel</button> <button class="button is-primary u-ml--36">DataPage.continue</button></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="footer"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connections.vue Connection type "CLOUD" should render create version properly 1`] = `
<div class="Dialog is-white"><button class="CDB-Shape Dialog-closeBtn"><img src="../../assets/icons/common/close.svg"></button>
  <div class="Dialog-contentWrapper Dialog-contentWrapper--withHeaderWrapper">
    <div class="Dialog-header CreateDialog-header with-separator"><img height="36" src="[object Object]" class="u-mb--12">
      <h2 class="CDB-Text CDB-Size-large u-mainTextColor">ConnectorsPage.addConnection</h2>
    </div>
    <div class="Dialog-body Dialog-body--expanded Dialog-body--create Dialog-body--noPaddingTop Dialog-body--withoutBorder Dialog-body--no-spacing">
      <div class="container grid">
        <div class="grid-cell grid-cell--col12 u-flex u-flex__direction--column">
          <div class="u-flex u-flex__justify--center u-flex__align--center u-pt--10 sub-header"><button class="back is-small is-semibold is-txtPrimary u-flex u-flex__align--center"><img src="../../assets/icons/common/icon-prev-blue.svg" class="u-mr--8">
              Connect
            </button>
            <h3 class="title is-caption is-regular is-txtMidGrey u-flex u-flex__align--center"><img height="21" src="undefined/images/layout/connectors/gdrive.svg" class="u-mr--8">
              DataPage.connectWith Google Drive
            </h3>
          </div>
          <div class="u-mt--32">
            <div class="u-flex u-flex__direction--column u-flex__align--center">
              <!----> <span class="text is-small is-txtMidGrey">ConnectorsPage.oauthRequesting</span>
              <!---->
              <div class="u-mt--32">
                <div class="loading-state">
                  <div class="loading-state-icon"><img svg-inline="" src="../../assets/icons/common/loading.svg" class="loading-state__svg primary" style="height: 40px; width: 40px;"></div>
                  <h6 class="loading-state-text text is-caption is-txtSoftGrey"></h6>
                </div>
              </div>
            </div>
          </div>
          <div class="footer"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connections.vue Connection type "DATABASE" should render create version 1`] = `
<div class="Dialog is-white"><button class="CDB-Shape Dialog-closeBtn"><img src="../../assets/icons/common/close.svg"></button>
  <div class="Dialog-contentWrapper Dialog-contentWrapper--withHeaderWrapper">
    <div class="Dialog-header CreateDialog-header with-separator"><img height="36" src="[object Object]" class="u-mb--12">
      <h2 class="CDB-Text CDB-Size-large u-mainTextColor">ConnectorsPage.addConnection</h2>
    </div>
    <div class="Dialog-body Dialog-body--expanded Dialog-body--create Dialog-body--noPaddingTop Dialog-body--withoutBorder Dialog-body--no-spacing">
      <div class="container grid">
        <div class="grid-cell grid-cell--col12 u-flex u-flex__direction--column">
          <div class="u-flex u-flex__justify--center u-flex__align--center u-pt--10 sub-header"><button class="back is-small is-semibold is-txtPrimary u-flex u-flex__align--center"><img src="../../assets/icons/common/icon-prev-blue.svg" class="u-mr--8">
              Connect
            </button>
            <h3 class="title is-caption is-regular is-txtMidGrey u-flex u-flex__align--center"><img height="21" src="undefined/images/layout/connectors/mysql.svg" class="u-mr--8">
              DataPage.connectWith MySQL
            </h3>
          </div>
          <div class="u-mt--32">
            <div class="u-flex u-flex__justify--center">
              <div>
                <!---->
                <h4 class="is-small is-semibold">DataPage.imports.database.title</h4>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper"><label class="is-small u-mr--16">DataPage.imports.database.label-name</label> <input type="text" placeholder="DataPage.imports.database.placeholder-name"></div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">server</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-server" type="text">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">port</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-port" type="number">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">database</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-database" type="text">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">username</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-username" type="text">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">password</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-password" type="password">
                </div>
                <!---->
                <div class="u-flex u-flex__justify--end u-mt--32">
                  <!----> <button class="CDB-Button CDB-Button--primary CDB-Button--big is-disabled"><span class="u-flex CDB-Text is-semibold CDB-Size-medium"><!---->
          DataPage.connect
        </span></button></div>
              </div>
              <div class="info u-ml--80 ">
                <h4 class="is-small is-semibold u-mb--8">DataPage.gettingConnected</h4>
                <p class="text u-mt--10 is-txtMidGrey is-small">
                  DataPage.connectInfo
                </p>
                <div class="ports u-pt--16 u-pb--16 u-pl--24 u-pr--24 u-mt--16 is-txtMidGrey is-small u-flex u-flex__direction--column u-flex__justify--between"><span class="u-mb--4">35.188.111.175</span> <span class="u-mb--4">35.192.121.157</span> <span class="u-mb--4">35.238.166.16</span> <span class="u-mb--4">35.224.241.96</span> <span class="u-mb--4">35.232.84.56</span> <span class="u-mb--4">35.205.127.169</span> <span class="u-mb--4">35.233.31.201</span> <span class="u-mb--4">35.187.80.96</span> <span class="u-mb--4">104.197.28.44</span> <span class="u-mb--4">104.199.3.149</span> <span>104.155.126.89</span></div>
              </div>
            </div>
          </div>
          <div class="footer"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connections.vue Connection type "DATABASE" should render edit version 1`] = `
<div class="Dialog is-white"><button class="CDB-Shape Dialog-closeBtn"><img src="../../assets/icons/common/close.svg"></button>
  <div class="Dialog-contentWrapper Dialog-contentWrapper--withHeaderWrapper">
    <div class="Dialog-header CreateDialog-header with-separator"><img height="36" src="[object Object]" class="u-mb--12">
      <h2 class="CDB-Text CDB-Size-large u-mainTextColor">ConnectorsPage.editConnection</h2>
    </div>
    <div class="Dialog-body Dialog-body--expanded Dialog-body--create Dialog-body--noPaddingTop Dialog-body--withoutBorder Dialog-body--no-spacing">
      <div class="container grid">
        <div class="grid-cell grid-cell--col12 u-flex u-flex__direction--column">
          <!---->
          <div class="u-mt--32">
            <div class="u-flex u-flex__justify--center">
              <div>
                <div class="alert u-pl--36 u-pt--8 u-pb--8 u-pr--8 u-mb--24"><span class="is-small">ConnectorsPage.editConnectionDisclaimer</span></div>
                <h4 class="is-small is-semibold">DataPage.imports.database.title</h4>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper"><label class="is-small u-mr--16">DataPage.imports.database.label-name</label> <input type="text" placeholder="DataPage.imports.database.placeholder-name"></div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">server</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-server" type="text">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">port</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-port" type="number">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">database</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-database" type="text">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">username</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-username" type="text">
                </div>
                <div class="u-flex u-flex__align--center u-flex__justify--between u-mt--24 input-wrapper">
                  <div class="u-flex u-flex__direction--column u-flex__align--end u-flex__grow--1  u-mr--16"><label class="is-small">password</label>
                    <!---->
                  </div> <input placeholder="DataPage.imports.database.placeholder-password" type="password">
                </div>
                <!---->
                <div class="u-flex u-flex__justify--end u-mt--32"><button class="u-mr--28 is-small is-semibold is-txtPrimary">ConnectorsPage.cancel</button> <button class="CDB-Button CDB-Button--primary CDB-Button--big is-disabled"><span class="u-flex CDB-Text is-semibold CDB-Size-medium"><!---->
          ConnectorsPage.editConnectionButton
        </span></button></div>
              </div>
              <div class="info u-ml--80 ">
                <h4 class="is-small is-semibold u-mb--8">DataPage.gettingConnected</h4>
                <p class="text u-mt--10 is-txtMidGrey is-small">
                  DataPage.connectInfo
                </p>
                <div class="ports u-pt--16 u-pb--16 u-pl--24 u-pr--24 u-mt--16 is-txtMidGrey is-small u-flex u-flex__direction--column u-flex__justify--between"><span class="u-mb--4">35.188.111.175</span> <span class="u-mb--4">35.192.121.157</span> <span class="u-mb--4">35.238.166.16</span> <span class="u-mb--4">35.224.241.96</span> <span class="u-mb--4">35.232.84.56</span> <span class="u-mb--4">35.205.127.169</span> <span class="u-mb--4">35.233.31.201</span> <span class="u-mb--4">35.187.80.96</span> <span class="u-mb--4">104.197.28.44</span> <span class="u-mb--4">104.199.3.149</span> <span>104.155.126.89</span></div>
              </div>
            </div>
          </div>
          <div class="footer"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
